# sway-worklog

./: Cargo.toml  Containerfile  README.md  compose.yaml  devenv.nix
.github/workflows/: ci.yaml
src/: config.rs  daemon.rs  error.rs  log_entry.rs  main.rs  paths.rs  report.rs  summary.rs
