[package]
name = "sway-worklog"
version = "0.1.0"
edition = "2024"

[dependencies]
swayipc = "4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
signal-hook = "0.3"
thiserror = "2"
